Update some summaries

--- a/components/closingpages/cv/cv.tex
+++ b/components/closingpages/cv/cv.tex
@@ -4,11 +4,11 @@
 	\section*{Curriculum Vitae}
 	\addcontentsline{toc}{chapter}{Curriculum Vitae}
 	\vspace{1cm}
-	\Large\textbf{Dominique Hans Joseph Dresen} \\[5mm]
+	\Large\textbf{Dominique Hans Joseph Dresen} \\
 	\begin{table}[H]
 		\begin{tabular}{p{3.5cm}l}
 			Geburtsdatum/-ort & 15.03.1989 in D\"usseldorf\\
-			Staatsangehörigkeit & Deutsch\\[5mm]
+			Staatsangehörigkeit & Deutsch\\
 		\end{tabular}
 	\end{table}
 
@@ -19,7 +19,8 @@
 
 			seit 11/2014 			& \textbf{Dissertation} Physikalische Chemie\\
 												& an der Universität zu Köln \\
-												& ""\\ 
+												& "Collective Magnetism in Long-Range Ordered\\
+												&  Structures of Magnetic Nanoparticles"\\
 												& bei Dr. Sabrina Disch \\ \\
 
 			10/2012 - 09/2014 & \textbf{Masterstudium} Physik \\
@@ -41,7 +42,8 @@
 												& bei Prof. Dr. Thomas Hebbeker\\
 												& Note: 1,0\\ \\
 
-			% 10/2008 - 07/2009 & \textbf{Grundwehrdienst} \\
+			10/2008 - 07/2009 & \textbf{Grundwehrdienst} \\
+												& Luftwaffe bei Germersheim \& Cochem \\ \\
 
 			08/1999 - 08/2008 & \textbf{Abitur} Gymnasium Schwertstrasse Solingen \\
 												& Note: 2,2\\
