--- a/dresen_thesis.tex
+++ b/dresen_thesis.tex
@@ -59,6 +59,7 @@
   \printbibliography
 
   \cleardoublepage
+  \pagestyle{plain}
   \bookmarksetup{startatroot}
   \subfile{\main/components/closingpages/closingpages}
 \end{document}
