--- a/components/closingpages/danksagung/danksagung.tex
+++ b/components/closingpages/danksagung/danksagung.tex
@@ -3,41 +3,34 @@
 \begin{document}
 	\section*{Acknowledgements}
 	\addcontentsline{toc}{chapter}{Acknowledgements}
-	Danke an Sabrina Disch, Sanjay Mathur, Uwe Ruschewitz, Stefan Roitsch
+	At this point I would like to reflect and thank everybody who has contributed in some way to the completition of this thesis.
+	At first I'd like to speak a large thank you to my supervisor Sabrina Disch for the warm welcome to the group, letting me work on this interesting topic, supporting it financially, her advices to progress and for personally advancing me.
+	Furthermore gratitude is spoken to Sanjay Mathur for being the co-supervisor of this thesis and his support.
+	Uwe Ruschewitz is thanked for being the head of commission and Stefan Roitsch for being the observer.
 
-	Finanzen: VCI
+	Furthermore, the working group is thanked for their support at the institute and lively discussions on the topics: Dominika Zàkutnà, Maria Hentschel, Flore Mees and Yannic Falke.
+	The latter two are furthermore acknowledged for their additional works done that contributed to this thesis during the performance of their Master and Bachelor's thesis respectively.
 
-	Bachelor und Master: Flore Mees, Yannic Falke
+	Students that performed lab courses with me and have thereby produced results that are included in this thesis are greatly acknowledged: Christian Tobeck, Markus Kr\"uger, Rajitha Ravithas and Anne Hansen.
 
-	AK: Dominika Zàkutnà, Maria Hentschel
+	The collaboration from the University of Mainz is thanked for providing samples and data: Wolfgang Tremel, Eugen Schechtel und Kristina Wichmann.
 
-	Studenten: Christian Tobeck, Markus Kr\"uger, Rajitha Ravithas, Anne Hansen
+	A great acknowledgement is spoken to Viktor Klippert and everybody of his workshop for their dedicated support and ingenious talent to build anything that can be drawn on a piece of paper.
 
-	Kollaboration: Wolfgang Tremel, Eugen Schechtel und Kristina Wichmann
+	The VCI is gratefully thanked for granting the Kekulé grant that financed three years of this thesis.
 
-	Support: Viktor Klippert und die Werkstatt
+	Annette Schmidt is thanked for providing laboratory spaces and access to equipment to perform chemical work, Patricia Bach for everything that she does to keep the laboratories running.
 
-	Support: Annette Schmidt, Patricia Bach
+	The colleagues Ahmad Shaaban, Matthias Kundt and Johanna Nothacker are gracefully acknowledged for sharing the journey.
 
-	Support: Ahmad Shaaban, Matthias Kundt, Johanna Nothacker
+	The instrumental scientists that have shown great support in data acquisition are acknowledged for their dedicated work:
+	Emmanuel Kentzinger \& Michael Smik (GALAXI), Alexei Vorobiev \& Gunnar Palsson \& Anton Devishvili (SuperADAM), Dirk Honecker (D22 \& D33), Stefan Mattauch \& Alexandros Koutsioumpas (MARIA), Thomas Saerbeck (D17) and Daniel Hermida Merino (BM26B)
 
-	SuperADAM: Alexei Vorobiev, Gunnar Palsson, Anton Devishvili
+	Ruth Bruker is thanked for being a support if problems at the scanning electron microscope occurred and for giving the introduction to the instrument.
 
-	MARIA: Stefan Mattauch, Alexandros Koutsioumpas
+	And Marc Effertz, Julian Seifert, Yeimy Martinez, Melissa Hess, Eric Roeben, Alexey Bushmelev, Sascha Sprott, Daniel Stadler and Kevin Graef are thanked for the good times and the discussions held on breaks.
 
-	GALAXI: Emmanuel Kentzinger, Michael Smik,
+	At last I'd like to thank Almut for always being there for me and providing me with mental and emotional support at all stages of this work with the patience of an angel.
 
-	PPMS: Xiao Sun, Markus Waschk
-
-	D17: Thomas Saerbeck
-
-	D33: Dirk Honecker
-
-	BM26B: Daniel Hermida Merino
-
-	REM Einfuehrung: Ruth Bruker
-
-	Good Times: Marc Effertz, Julian Seifert, Yeimy Martinez, Melissa Hess, Eric Roeben, Alexey Bushmelev, Sascha Sprott, Daniel Stadler, Kevin Graef
-
-	Almut
+	% I don't thank the scientific system for oppressing thousands of people every year. I spit on it.
 \end{document}
