Update loosely packed NP

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -601,6 +601,15 @@ volume = 7,
 pages = {13576-13585},
 doi = {10.1039/c5nr02723c},
 }
+@article{Muxworthy_1999_Lowte,
+author = {A. R. Muxworthy},
+title = {Low-temperature susceptibility and hysteresis of magnetite},
+journal = {Earth and Planetary Science Letters},
+year = 1999,
+volume = 169,
+pages = {51-58},
+doi = {10.1016/S0012-821X(99)00067-9},
+}
 @article{Nevot_1980_Carac,
 author = {L. Névot and P. Croce},
 title = {Caractérisation des surfaces par réflexion rasante de rayons X. Application à l'étude du polissage de quelques verres silicates},
@@ -994,6 +1003,15 @@ volume = 530,
 number = 7589,
 pages = {145-147},
 doi = {10.1038/530144a},
+}
+@article{Walz_2002_Theve,
+author = {Friedrich Walz},
+title = {The Verwey transition - a topical review},
+journal = {J. Phys.: Condens. Matter},
+year = 2002,
+volume = 14,
+pages = {R285-R340},
+doi = {10.1088/0953-8984/14/12/203},
 }
 @article{Wen_2011_Ultral,
 author = {Tianlong Wen and Sara A. Majetich},
