Everywhere something is written. Phew

--- a/components/abstract/abstract.tex
+++ b/components/abstract/abstract.tex
@@ -2,11 +2,16 @@
 \documentclass[\main/dresen_thesis.tex]{subfiles}
 \begin{document}
   The collective magnetism of nanostructures is studied for four type of magnetic nanostructures: loosely packed nanospheres, monolayers of long-range ordered nanocubes in square arrays, double layers of said nanocubes in square arrays with non-magnetic spacer material of variable thickness in between, and at last three-dimensional colloidal crystals of nanocubes.
-  Each nanostructure is studied by first discussing the non-interacting nanoparticle properties as is determined by small-angle X-ray and neutron scattering on dilute dispersions.
-  Then the structure and magnetism of the arranged particles is resolved by grazing-incident scattering and reflectometry, where the results are compared with the nanoparticle properties to conclude on collective effects from interparticle interaction.
+  Each nanostructure is studied by first discussing the non-interacting nanoparticle properties as is determined by small-angle X-ray and (polarized) neutron scattering on dilute dispersions, as well as complimentary electron microscopy, X-ray diffraction and vibrating sample magnetometry experiments.
+  Then the structure and magnetism of the arranged particles is resolved by grazing-incident small-angle scattering and reflectometry.
+  The results are compared with the nanoparticle properties in dispersion, as well as with expectations of dipolar interaction for the nanoparticles on the determined interparticle distances, to conclude on collective magnetic effects.
   \\
 
-  For the discussion of the monolayer structure, a evaporation-driven self-assembly procedure to achieve long-range order for oleic acid ligated nanoparticles into a two-dimensional lattice is presented.
-  It is shown that the method is capable to be extended to double layer in combination with spin-coated inter layers, which is used to perform a systematic study on interlayer dipolar interaction.
-  Furthermore, for the detailed evaluation of the nanoparticle structural and magnetic properties, the superball form factor is introduced and used for the case of cubically shaped nanoparticles to account for the deviation from a perfect cube shape by rounded surfaces.
+  For the detailed evaluation of the nanoparticle structural and magnetic properties, the superball form factor is introduced and used for the case of cubically shaped nanoparticles to account for the deviation from a perfect cube shape by rounded surfaces.
+  It is shown that the superball form factor in comparison to the limiting cases of either a spherical or cubic form factor provides the best description of the observed scattering data in multiple cases.
+  For the discussion of the monolayer structure, an evaporation-driven self-assembly procedure to achieve long-range order for oleic acid-ligated nanoparticles into a two-dimensional lattice is developed.
+  It is shown that the method is capable to be extended to the preparation of double layers by combining the method with spin-coated inter layers, which is used to perform a first systematic study on interlayer dipolar interaction between nanoparticle layers.
+
+  The four presented studies show the strength of the method of exactly determining the single nanoparticle properties from dispersion for the discussion of interparticle interaction effects in nanostructures.
+  As well as the pitfalls that need to be considered to make unbiased conclusions on what is an interaction effect and what is an effect coming from the single nanoparticles, which can already greatly differ from bulk material magnetic properties themselves.
 \end{document}
