--- a/components/abstract/abstractGerman.tex
+++ b/components/abstract/abstractGerman.tex
@@ -1,12 +1,16 @@
 \providecommand{\main}{../..}
 \documentclass[\main/dresen_thesis.tex]{subfiles}
 \begin{document}
-  Der kollektive Magnetismus von Nanostrukturen wird für vier Typen von magnetischen Nanostrukturen untersucht: locker gepackte Nanokugeln, Monoschichten von langreichweitig geordneteten Nanowürfeln in quadratischen Anordnungen, Doppelschichten der Nanowürfel in quadratischen Anordnungen mit nichtmagnetischem Zwischenmaterial variabler Dicke, so wie dreidimensionale kolloidale Kristalle aus Nanowürfeln.
-  Jede Nanostruktur wird untersucht, indem zuerst die nicht wechselwirkenden Nanoteilcheneigenschaften diskutiert werden, welche durch Kleinwinkelstreuung mittels Röntgen und Neutronenstrahlung in verdünnten Dispersionen bestimmt wird.
-  Anschließend werden Struktur und Magnetismus der angeordneten Nanoteilchen durch Streuexperimente unter streifendem Einfall und Reflektometrie gelöst, wobei die Ergebnisse mit den Eigenschaften der Nanoteilchen verglichen werden, um auf kollektive Effekte der Interpartikelwechselwirkung schließen zu können.
+  Der kollektive Magnetismus von Nanostrukturen wird für vier Arten magnetischer Nanostrukturen untersucht: lose gepackte Nanokugeln, Monolagen von langreichweitig geordneten Nanowürfeln in quadratischen Anordnungen, Doppelschichten der Nanowürfel in quadratischen Anordnungen mit nichtmagnetischem Zwischenmaterial variabler Dicke, so wie dreidimensionale kolloidale Kristalle aus Nanowürfeln.
+  Jede der Nanostrukturen wird untersucht, indem zunächst die nicht wechselwirkenden Nanoteilcheneigenschaften untersucht werden, welche durch Kleinwinkel Röntgen- und (polarisierter) Neutronenstreuung an verdünnten Dispersionen, sowie durch komplementäre Elektronenmikroskopie-, Röntgenbeugungs- und Magnetometrieexperimente bestimmt werden.
+  Anschließend wird die Struktur und der Magnetismus der angeordneten Teilchen durch Kleinwinkel Streuung unter streifendem Einfall und Reflektometrie bestimmt.
+  Die Ergebnisse werden mit den Nanoteilcheneigenschaften in Dispersion sowie mit den Erwartungen für dipolare Wechselwirkung zwischen den Nanoteilchen auf den ermittelten Längenskalen verglichen, um auf kollektive magnetische Effekte schließen zu können.
   \\
 
-  Für die Diskussion der Monoschichtstruktur wird ein auf Verdampfung basierendes Selbstorganisationsverfahren vorgestellt, um eine weitreichende Ordnung für Ölsäure-ligierte Nanoteilchen in einem zweidimensionalen Gitter zu erreichen.
-  Es wird gezeigt, dass das Verfahren in der Lage ist, sich in Kombination mit spinbeschichteten Zwischenschichten auf eine Doppelschicht auszudehnen, woraufhin eine systematische Untersuchung der dipolaren Wechselwirkung zwischen den Schichten durchgeführt wird.
   Zur detaillierten Bewertung der strukturellen und magnetischen Eigenschaften der Nanoteilchen wird der Superball-Formfaktor eingeführt und für kubisch geformte Nanoteilchen verwendet, um die Abweichung einer perfekten Würfelform durch abgerundete Oberflächen zu berücksichtigen.
+  Es wird gezeigt, dass der Superball-Formfaktor im Vergleich zu den Grenzfällen eines kugelförmigen oder kubischen Formfaktors in mehreren Fällen die beste Beschreibung der beobachteten Streudaten liefert.
+  Für die Diskussion der Monolagenstruktur wird ein auf verdampfungsgetriebenes Selbstorganisationsverfahren entwickelt, um eine weitreichende Ordnung für Ölsäure-beschichtete Nanoteilchen in einem zweidimensionalen Gitter zu erreichen.
+  Es wird gezeigt, dass das Verfahren auf die Herstellung von Doppelschichten ausgedehnt werden kann, indem das Verfahren mit rotationsbeschichteten Zwischenlagen kombiniert wird, um eine erste systematische Untersuchung für dipolare Wechselwirkung zwischen Nanoteilchenschichten durchzuführen.
+
+  Die vier vorgestellten Studien zeigen die Stärke der Methode auf, bei der zunächst die Nanoteilcheneigenschaften aus der Dispersion bestimmt werden um anschließend die Diskussion der Interpartikelwechselwirkungen in Nanostrukturen zu bewerten. Ebenso zeigen sie die Fallstricke auf, die berücksichtigt werden müssen, um unvoreingenommen Schlussfolgerungen ziehen zu können, welche Beobachtungen Interaktionseffekte sind und welche von den Nanoteilchen selbst ausgehen, welche bereits stark von den magnetischen Eigenschaften ausgedehnter Materialien abweichen können.
 \end{document}
