--- a/components/closingpages/danksagung/danksagung.tex
+++ b/components/closingpages/danksagung/danksagung.tex
@@ -3,10 +3,10 @@
 \begin{document}
 	\section*{Acknowledgements}
 	\addcontentsline{toc}{chapter}{Acknowledgements}
-	At this point I would like to reflect and thank everybody who has contributed in some way to the completition of this thesis.
-	At first I'd like to speak a large thank you to my supervisor Sabrina Disch for the warm welcome to the group, letting me work on this interesting topic, supporting it financially, her advices to progress and for personally advancing me.
-	Furthermore gratitude is spoken to Sanjay Mathur for being the co-supervisor of this thesis and his support.
-	Uwe Ruschewitz is thanked for being the head of commission and Stefan Roitsch for being the secretary of the defense.
+	At this point I would like to reflect and thank everybody who has contributed in some way to the completion of this thesis.
+	At first I'd like to speak a large thank you to my supervisor Sabrina Disch for the warm welcome to the group, letting me work on this interesting topic, supporting it financially, her continuous advice to further progress and for personally advancing me.
+	Furthermore gratitude is spoken to Prof. Sanjay Mathur for being the co-supervisor of this thesis and his support.
+	Prof. Uwe Ruschewitz is thanked for being the head of commission and Dr. Stefan Roitsch for being the secretary of the defense.
 
 	Furthermore, the working group is thanked for their support at the institute and lively discussions on the topics: Dominika Zàkutnà, Maria Hentschel, Flore Mees and Yannic Falke.
 	The latter two are furthermore acknowledged for their additional works done that contributed to this thesis during the performance of their Master and Bachelor's thesis respectively.
@@ -24,15 +24,15 @@
 	The colleagues Ahmad Shaaban, Matthias Kundt and Johanna Nothacker are gracefully acknowledged for sharing the journey.
 
 	The instrumental scientists that have shown great support in data acquisition are acknowledged for their dedicated work:
-	Emmanuel Kentzinger \& Michael Smik (GALAXI), Alexei Vorobiev \& Gunnar Palsson \& Anton Devishvili (SuperADAM), Dirk Honecker (D22 \& D33), Stefan Mattauch \& Alexandros Koutsioumpas (MARIA), Thomas Saerbeck (D17) and Daniel Hermida Merino (BM26B)
+	Emmanuel Kentzinger \& Michael Smik (GALAXI), Alexei Vorobiev \& Gunnar Pálsson \& Anton Devishvili (SuperADAM), Dirk Honecker (D22 \& D33), Stefan Mattauch \& Alexandros Koutsioumpas (MARIA), Thomas Saerbeck (D17) and Daniel Hermida Merino (BM26B)
 
 	Ruth Bruker is thanked for being a support if problems at the scanning electron microscope occurred and for giving the introduction to the instrument.
-	
+
 	Stefan Roitsch additionally for performing the transmission electron microscopy measurements.
 
 	The colleagues Marc Effertz, Julian Seifert, Yeimy Martinez, Melissa Hess, Eric Roeben, Alexey Bushmelev, Sascha Sprott, Daniel Stadler and Kevin Graef are thanked for the good times and the discussions during lunch.
 
 	At last I'd like to thank Almut for always being there for me and providing me with mental and emotional support at all stages of this work with the patience of an angel.
 
-	% I don't thank the scientific system for oppressing thousands of people every year. I spit on it.
+	% Most of this page is a lie. This were the worst 4-5 years of my life.
 \end{document}
