--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -529,6 +529,15 @@ volume = 189,
 pages = {777-782},
 doi = {10.1083/jcb.201004104},
 }
+@article{Lu_2007_Magne,
+author = {An-Hui Lu and E. L. Salabash and Ferdi Sch\"uth},
+title = {Magnetic Nanoparticles: Synthesis, Protection, Functionalization, and Application},
+journal = {Angew. Chem.},
+year = 2007,
+volume = 46,
+pages = {1222-1244},
+doi = {10.1002/anie.200602866},
+}
 @article{Lu_2015_Synth,
 author = {Le T. Lu and Ngo T. Dung and Le D. Tung and Cao T. Thanh and Ong K. Quy and Nguyen V. Chuc and Shinya Maenosono and Nguyen T. K. Thanh},
 title = {Synthesis of magnetic cobalt ferrite nanoparticles with controlled morphology, monodispersity and composition: the influence of solvent, surfactant, reductant and synthetic conditions},
