--- a/components/titlepage/titlepage.tex
+++ b/components/titlepage/titlepage.tex
@@ -44,7 +44,7 @@
 \medskip
 \vspace{2cm}
 
-Tag der letzten mündlichen Prüfung:
+Tag der letzten mündlichen Prüfung: 25.03.2019
 
 
 % %   \begin{center}
