Correct first two chapters

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -257,6 +257,14 @@ year = 2015,
 volume = 88,
 doi = {10.5562/cca2752},
 }
+@article{Fleet_1984_Thest,
+author = {M. Fleet},
+title = {The Structure of Magnetite: Two Annealed Natural Magnetites, \ch{Fe_{3.005}O4} and \ch{Fe_{2.96}Mg_{0.04}O4}},
+journal = {Acta. Cryst.},
+year = 1984,
+volume = 40,
+doi = {10.1107/S0108270184008489},
+}
 @article{FZJ_2016_GALAX,
 author = {Forschungszentrum J\"ulich},
 title = {GALAXI: Gallium anode low-angle x-ray instrument},
@@ -618,6 +626,15 @@ year = 2015,
 volume = 27,
 pages = {136001},
 doi = {10.1088/0953-8984/27/13/136001},
+}
+@article{Momma_2011_Vesta,
+author = {K. Momma and F. Izumi},
+title = {VESTA 3 for three-dimensional visualization of crystal, volumetric and morphology data},
+journal = {J. Appl. Cryst.},
+year = 2011,
+volume = 44,
+pages = {1272-1276},
+doi = {10.1107/S0021889811038970},
 }
 @article{Muscas_2015_Evolu,
 author = {G. Muscas and N. Yaacoub and G. Concas and F. Sayed and R. Sayed Hassan and J.M. Greneche and C. Cannas and A. Musinu and V. Foglietti and S. Casciardi and C. Sangregoria and D. Peddis},
@@ -1322,6 +1339,12 @@ doi = {10.1103/RevModPhys.76.323},
 	title        = {Nanoelectronics and Information Technology},
 	publisher    = {Wiley-VCH},
 	date         = {2012}
+}
+@book{Wyckoff_1963_Secon,
+author = {R. W. G. Wyckoff},
+title = {Crystal Structures},
+publisher = {New York: Interscience Publishers},
+date = {1963},
 }
 @book{Zhu_2005_Moder,
 	author       = {Yimei Zhu},
