--- a/components/abstract/abstract.tex
+++ b/components/abstract/abstract.tex
@@ -1,7 +1,7 @@
 \providecommand{\main}{../..}
 \documentclass[\main/dresen_thesis.tex]{subfiles}
 \begin{document}
-  The collective magnetism of nanostructures is studied for four type of magnetic nanostructures: loosely packed nanospheres, monolayers of long-range ordered nanocubes in square arrays, double layers of said nanocubes in square arrays with non-magnetic spacer material of variable thickness in between, and at last three-dimensional colloidal crystals of nanocubes.
+  The collective magnetism is studied for four type of magnetic nanostructures: loosely packed nanospheres, monolayers of long-range ordered nanocubes in square arrays, double layers of said nanocubes in square arrays with non-magnetic spacer material of variable thickness in between, and at last three-dimensional colloidal crystals of nanocubes.
   Each nanostructure is studied by first discussing the non-interacting nanoparticle properties as is determined by small-angle X-ray and (polarized) neutron scattering on dilute dispersions, as well as complimentary electron microscopy, X-ray diffraction and vibrating sample magnetometry experiments.
   Then the structure and magnetism of the arranged particles is resolved by grazing-incident small-angle scattering and reflectometry.
   The results are compared with the nanoparticle properties in dispersion, as well as with expectations of dipolar interaction for the nanoparticles on the determined interparticle distances, to conclude on collective magnetic effects.
