--- a/components/abstract/abstractGerman.tex
+++ b/components/abstract/abstractGerman.tex
@@ -1,16 +1,18 @@
 \providecommand{\main}{../..}
 \documentclass[\main/dresen_thesis.tex]{subfiles}
 \begin{document}
-  Der kollektive Magnetismus von Nanostrukturen wird für vier Arten magnetischer Nanostrukturen untersucht: lose gepackte Nanokugeln, Monolagen von langreichweitig geordneten Nanowürfeln in quadratischen Anordnungen, Doppelschichten der Nanowürfel in quadratischen Anordnungen mit nichtmagnetischem Zwischenmaterial variabler Dicke, so wie dreidimensionale kolloidale Kristalle aus Nanowürfeln.
+  % \addchap*{Kurzfassung}
+  Der kollektive Magnetismus wird für vier Arten magnetischer Nanostrukturen untersucht: lose gepackte Nanokugeln, Monolagen von langreichweitig geordneten Nanowürfeln in quadratischen Anordnungen, Doppelschichten der quadratischen Anordnungen mit nichtmagnetischem Zwischenmaterial variabler Dicke, so wie dreidimensionale kolloidale Kristalle aus Nanowürfeln.
   Jede der Nanostrukturen wird untersucht, indem zunächst die nicht wechselwirkenden Nanoteilcheneigenschaften untersucht werden, welche durch Kleinwinkel Röntgen- und (polarisierter) Neutronenstreuung an verdünnten Dispersionen, sowie durch komplementäre Elektronenmikroskopie-, Röntgenbeugungs- und Magnetometrieexperimente bestimmt werden.
   Anschließend wird die Struktur und der Magnetismus der angeordneten Teilchen durch Kleinwinkel Streuung unter streifendem Einfall und Reflektometrie bestimmt.
-  Die Ergebnisse werden mit den Nanoteilcheneigenschaften in Dispersion sowie mit den Erwartungen für dipolare Wechselwirkung zwischen den Nanoteilchen auf den ermittelten Längenskalen verglichen, um auf kollektive magnetische Effekte schließen zu können.
+  Die Ergebnisse werden mit den nicht wechselwirkenden Nanoteilcheneigenschaften, sowie mit den Erwartungen für dipolare Wechselwirkung auf den ermittelten Längenskalen verglichen, um auf Effekte kollektiven Magnetismus zu schließen.
   \\
 
-  Zur detaillierten Bewertung der strukturellen und magnetischen Eigenschaften der Nanoteilchen wird der Superball-Formfaktor eingeführt und für kubisch geformte Nanoteilchen verwendet, um die Abweichung einer perfekten Würfelform durch abgerundete Oberflächen zu berücksichtigen.
-  Es wird gezeigt, dass der Superball-Formfaktor im Vergleich zu den Grenzfällen eines kugelförmigen oder kubischen Formfaktors in mehreren Fällen die beste Beschreibung der beobachteten Streudaten liefert.
-  Für die Diskussion der Monolagenstruktur wird ein auf verdampfungsgetriebenes Selbstorganisationsverfahren entwickelt, um eine weitreichende Ordnung für Ölsäure-beschichtete Nanoteilchen in einem zweidimensionalen Gitter zu erreichen.
-  Es wird gezeigt, dass das Verfahren auf die Herstellung von Doppelschichten ausgedehnt werden kann, indem das Verfahren mit rotationsbeschichteten Zwischenlagen kombiniert wird, um eine erste systematische Untersuchung für dipolare Wechselwirkung zwischen Nanoteilchenschichten durchzuführen.
+  Zur detaillierten Bewertung der strukturellen und magnetischen Eigenschaften der Nanoteilchen wird der Superball-Formfaktor eingeführt und für kubisch geformte Nanoteilchen angewandt, um die Abweichung von einer perfekten Würfelform durch abgerundete Oberflächen zu beschreiben.
+  Es wird gezeigt, dass im Vergleich zum kugelförmigen oder kubischen Formfaktor in mehreren Fällen dies die beste Beschreibung der beobachteten Streudaten liefert.
+  Für die Diskussion der Monolagenstruktur wird ein verdampfungsgetriebenes Selbstorganisationsverfahren entwickelt, um eine weitreichende Ordnung für Ölsäure-beschichtete Nanoteilchen in einem zweidimensionalen Gitter zu erreichen.
+  Es wird gezeigt, dass das Verfahren auf die Herstellung von Doppelschichten ausgedehnt werden kann, indem es mit rotationsbeschichteten Zwischenlagen kombiniert wird, um eine erste systematische Untersuchung für dipolare Wechselwirkung zwischen Nanoteilchenschichten durchzuführen.
 
-  Die vier vorgestellten Studien zeigen die Stärke der Methode auf, bei der zunächst die Nanoteilcheneigenschaften aus der Dispersion bestimmt werden um anschließend die Diskussion der Interpartikelwechselwirkungen in Nanostrukturen zu bewerten. Ebenso zeigen sie die Fallstricke auf, die berücksichtigt werden müssen, um unvoreingenommen Schlussfolgerungen ziehen zu können, welche Beobachtungen Interaktionseffekte sind und welche von den Nanoteilchen selbst ausgehen, welche bereits stark von den magnetischen Eigenschaften ausgedehnter Materialien abweichen können.
+  Die vier vorgestellten Studien zeigen die Stärke der Methode auf, bei der zunächst die Nanoteilcheneigenschaften aus der Dispersion bestimmt werden um anschließend Effekte aus Interpartikelwechselwirkungen in Nanostrukturen zu diskutieren.
+  Ebenso zeigen sie die Fallstricke auf, die berücksichtigt werden müssen, um unvoreingenommen Schlussfolgerungen ziehen zu können, welche Beobachtungen Interaktionseffekte sind und welche von den Nanoteilchen selbst ausgehen, welche bereits stark von den magnetischen Eigenschaften ausgedehnter Materialien abweichen können.
 \end{document}
