Korrekturen legen los

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -16,6 +16,15 @@ volume = 33,
 pages = {303-310},
 doi = {10.1021/acs.langmuir.6b03570},
 }
+@article{Alves_2017_Waspw,
+author = {Tibério Magno de Lima Alves and Bruno Ferreira Amorim and Marco Antonio Morales Torres and Claudionor Gomes Bezerra and Suzana Nóbrega de Medeiros and Pedro Lana Gastelois and Luis Eugenio Fernandez Outon and Waldemar Augusto de Almeida Macedo},
+title = {Wasp-waisted behavior in magnetic hysteresis curves of \ch{CoFe2O4} nanopowder at a low temperature: experimental evidence and theoretical approach},
+journal = {RSC Adv.},
+year = 2017,
+volume = 7,
+pages = {22187},
+doi = {10.1039/c6ra28727a},
+}
 @article{Angotzi_2017_Spine,
 author = {Marco Sanna Angotzi and Anna Musinu and Valentina Mameli and Andrea Ardu and Claudio Cara and Daniel Niznansky and Huolin L. Xin and Carla Cannas},
 title = {Spinel Ferrite Core–Shell Nanostructures by a Versatile Solvothermal Seed-Mediated Growth Approach and Study of Their Nanointerfaces},
@@ -63,7 +72,7 @@ doi = {10.1021/cm901033m},
 }
 @article{Bergmann_2005_Antif,
 author = {A. Bergmann and J. Grabis and B. P. Toperverg and V. Leiner and M. Wolff and H. Zabel and K. Westerholt},
-title = {Antiferromagnetic dipolar ordering in [\ch{Co_2 Mn Ge}/V]_N multilayers},
+title = {Antiferromagnetic dipolar ordering in [\ch{Co_2 Mn Ge/V]_N} multilayers},
 journal = {Phys. Rev. B},
 year = 2005,
 volume = 72,
@@ -114,6 +123,15 @@ year = 2016,
 volume = 6,
 pages = {085201},
 doi = {10.1063/1.4960457},
+}
+@article{Boles_2016_Selfa,
+author = {M. A. Boles and M. Engel and D. V. Talapin},
+title = {Self-Assembly of Colloidal Nanocrystals: From Intricate Structures to Functional Materials},
+journal = {Chem. Rev.},
+year = 2016,
+volume = 116,
+pages = {11220-11289},
+doi = {10.1021/acs.chemrev.6b00196},
 }
 @article{Box_1957_Anoteo,
 author = {G. E. P. Box and Mervin E. Mueller},
@@ -186,6 +204,15 @@ year = 1998,
 volume = 31,
 pages = {925-941},
 doi = {10.1088/0022-3727/31/8/003},
+}
+@article{Denkov_1992_Mecha,
+author = {N. D. Denkov and O. D. Velev and P. A. Kralchevsky and I. B. Ivanov and H. Yoshimura and K. Nagayama},
+title = {Mechanism of Formation of Two-Dimensional Crystals from Latex Particles on Substrates},
+journal = {Langmuir},
+year = 1992,
+volume = 8,
+pages = {3183-3190},
+doi = {10.1021/la00048a054},
 }
 @article{Devishvili_2015_Super,
 author = {A. Devishvili and K. Zhernenkov and A. J. C. Dennison and B. P. Toperverg and M. Wolff and B. Hj\"orvarsson and H. Zabel},
@@ -275,7 +302,7 @@ doi = {10.17815/jlsrf-2-109},
 }
 @article{Fontana_2015_Volum,
 author = {R. E. Fontana and G. M. Decad and S. R. Hetzler},
-title = {Volumetric density trends (TB/in.^3 for storage components: TAPE, hard disk drives, NAND and Blu-ray},
+title = {Volumetric density trends (TB/in{$.^3$}) for storage components: TAPE, hard disk drives, NAND and Blu-ray},
 journal = {J. Appl. Phys},
 year = 2015,
 volume = 117,
@@ -336,6 +363,15 @@ year = 1989,
 volume = 39,
 pages = {4828-4830},
 doi = {10.1021/nn100869j},
+}
+@article{Geng_2016_Highm,
+author = {B. Q. Geng and Y. Q. Ma and S. T. Xu and Y. F. Xu and X. Sun and Z. X. Dai and G. H. Zheng},
+title = {High magnetic performance of cobalt ferrite and anomalous magnetizing behaviour of \ch{CoFe2}/oxide derived from ferrite},
+journal = {Ceramics International},
+year = 2016,
+volume = 42,
+pages = {317-324},
+doi = {10.1016/j.ceramint.2016.08.113},
 }
 @article{Grzelczak_2010_direc,
 author = {Marek Grzelczak and Jan Vermant and Eric M. Furst and Luis M. Liz-Marán},
@@ -400,7 +436,7 @@ doi = {10.1021/jp1047979},
 }
 @article{Hentschel_1970_Stoich,
 author = {Bernhard Hentschel},
-title = {Stoichiometric FeO as Metastable Intermediate of the Decomposition of Wustite at 225^\circ C },
+title = {Stoichiometric FeO as Metastable Intermediate of the Decomposition of Wustite at {$225^\circ \mathrm{C}$} },
 journal = {Zeitschrift f. Naturforschung A},
 year = 2010,
 pages = {1996-1997},
@@ -422,6 +458,14 @@ year = 2003,
 pages = {927-934},
 doi = {10.1039/B207789B},
 }
+@article{Jiang_1999_Singl,
+author = {P. Jiang and J. F. Bertone and K. S. Hwang and V. L. Colvin},
+title = {Single-Crystal Colloidal Multilayers of Controlled Thickness},
+journal = {Chem. Mater.},
+year = 1999,
+pages = {2132-2140},
+doi = {10.1021/cm990080},
+}
 @article{Josten_2017_Super,
 author = {E. Josten and E. Wetterskog and A. Glavic and P. Boesecke and A. Feoktystov and E. Brauweiler-Reuters and U. R\"ucker and G. Salazar-Alvarez and Th. Br\"uckel},
 title = {Superlattice growth and rearrangement during evaporation-induced nanoparticle self-assembly},
@@ -432,7 +476,7 @@ doi = {10.1038/s41598-017-02121-4},
 }
 @article{Jung_2005_CoFe2,
 author = {J.-S. Jung and J.-H. Lim},
-title = {CoFe_2O_4 nanostructures with high coercivity},
+title = {\ch{CoFe_2O_4} nanostructures with high coercivity},
 journal = {Journal of Applied Physics},
 year = 2005,
 pages = {10F306},
@@ -482,6 +526,15 @@ year = 2015,
 volume = 48,
 pages = {301-305},
 doi = {10.1107/S1600576714027575},
+}
+@article{Kuai_2004_Highq,
+author = {S.-L. Kuai and X.-F. Hu and A. Haché and V.-V. Truong},
+title = {High-quality colloidal photonic crystals obtained by optimizing growth parameters in a vertical deposition technique},
+journal = {J. Cryst. Growth},
+year = 2004,
+volume = 267,
+pages = {317-324},
+doi = {10.1016/j.jcrysgro.2004.03.015},
 }
 @article{Labrune_2002_Dipol,
 author = {M. Labrune and H. Niedoba},
@@ -537,6 +590,15 @@ volume = 189,
 pages = {777-782},
 doi = {10.1083/jcb.201004104},
 }
+@article{Lopez_1997_Photo,
+author = {C. López and L. Vázquez and F. Meseguer and R. Mayoral and M. Ocaña},
+title = {Photonic crystal made by close packing \ch{SiO2} submicron spheres},
+journal = {Superlattices and Microstructures},
+year = 1997,
+volume = 22,
+pages = {399-404},
+doi = {10.1006/spmi.1996.0313},
+}
 @article{Lu_2007_Magne,
 author = {An-Hui Lu and E. L. Salabash and Ferdi Sch\"uth},
 title = {Magnetic Nanoparticles: Synthesis, Protection, Functionalization, and Application},
@@ -557,7 +619,7 @@ doi = {10.1039/c5nr04266f},
 }
 @article{Margulies_1997_Origi,
 author = {D. T. Margulies and F. T. Parker and M. L. Rudee and F. E. Spada and J. N. Chapman and P. R. Aitchison and A. E. Berkowitz},
-title = {Origin of the Anomalous Magnetic Behaviour in Single Cyrstal \ch{Fe3o4} Films},
+title = {Origin of the Anomalous Magnetic Behaviour in Single Cyrstal \ch{Fe3O4} Films},
 journal = {Phys. Rev. Lett.},
 year = 1997,
 volume = 79,
@@ -599,6 +661,24 @@ year = 1999,
 volume = 59,
 pages = {1185-1195},
 doi = {10.1103/PhysRevB.59.1185},
+}
+@article{Meijer_2012_Selfa,
+author = {J.-M. Meijer and F. Hagemans and L. Rossi and D. V. Byelov and S. I. R. Castillo and A. Snigirev and I. Snigireva and A. P. Philipse and A. V. Petukhov},
+title = {Self-Assembly of Colloidal Cubes via Vertical Deposition},
+journal = {Langmuir},
+year = 2012,
+volume = 28,
+pages = {7631-7638},
+doi = {10.1021/la3007052},
+}
+@article{Miguez_1998_Contr,
+author = {H. Miguez and F. Meseguer and C. López and Á. Blanco and J. S. Moya and J. Requena and A. Mifsud and V. Fornés},
+title = {Control of the Photonic Crystal Properties of fcc-Packed Submicrometer \ch{SiO2} Spheres by Sintering},
+journal = {Adv. Mater.},
+year = 1998,
+volume = 10,
+pages = {480-483},
+doi = {10.1002/(SICI)1521-4095(199804)10:6<480::AID-ADMA480>3.0.CO;2-Y},
 }
 @article{Mildner_2005_Arefr,
 author = {D. F. R. Mildner and B. Hammouda and S. R. Kline},
@@ -693,7 +773,7 @@ doi = {10.1039/c1jm12012c},
 }
 @article{Peddis_2008_Spinc,
 author = {D. Peddis and M. V. Mansilla and S. Morup and C. Cannas and A. Musinu and G. Piccaluga and F. D'Orazio and F. Lucari and D. Fiorani},
-title = {Spin-Canting and Magnetic Anisotropy in Ultrasmall CoFe_2O_4 Nanoparticles},
+title = {Spin-Canting and Magnetic Anisotropy in Ultrasmall \ch{CoFe_2O_4} Nanoparticles},
 journal = {J. Phys. Chem. B},
 year = 2008,
 volume = 112,
@@ -792,7 +872,7 @@ doi = {10.1016/j.surfrep.2009.07.002},
 }
 @article{Repko_2015_Oleate,
 author = {Anton Repko and Jana Vejpravová and Tat'ana Vacková and Dominika Zákutná and Daniel Niznanský},
-title = {Oleate-based hydrothermal preparation of CoFe_2O_4 nanoparticles, and their magnetic properties with respect to particle size and surface coating},
+title = {Oleate-based hydrothermal preparation of \ch{CoFe_2O_4} nanoparticles, and their magnetic properties with respect to particle size and surface coating},
 journal = {Journal of Magnetism and Magnetic Materials},
 year = 2015,
 volume = 390,
@@ -838,7 +918,7 @@ doi = {10.1021/acs.chemmater.5b04780},
 }
 @article{Sawatzky_1968_Catio,
 author = {G. A. Sawatzky and F. van der Woude and A. H. Morrish},
-title = {Cation Distributions in Octahedral and Tetrahedral Sites of the Ferrimagnetic Spinel CoFe_2O_4},
+title = {Cation Distributions in Octahedral and Tetrahedral Sites of the Ferrimagnetic Spinel \ch{CoFe_2O_4}},
 journal = {Journal of Applied Physics},
 year = 1968,
 volume = 39,
@@ -875,7 +955,7 @@ doi = {10.1080/10448639208218770},
 }
 @article{Shenker_1957_Magne,
 author = {Henry Shenker},
-title = {Magnetic Anisotropy of Cobalt Ferrite (Co_{1.01}Fe_{2.00}O_{3.62}) and Nickel Cobalt Ferrite (Ni_{0.72}Fe_{0.2}Co_{0.08}Fe_2O_4)},
+title = {Magnetic Anisotropy of Cobalt Ferrite (\ch{Co_{1.01}Fe_{2.00}O_{3.62}}) and Nickel Cobalt Ferrite (\ch{Ni_{0.72}Fe_{0.2}Co_{0.08}Fe_2O_4})},
 journal = {Physical Review},
 year = 1957,
 volume = 107,
@@ -963,6 +1043,15 @@ year = 1960,
 volume = 23,
 pages = {1055-1071},
 doi = {10.1143/PTP.23.1055},
+}
+@article{Tirosh_2005_Optim,
+author = {E. Tirosh and G. Shemer and G. Markovich},
+title = {Optimizing Cobalt Ferrite Nanocrystal Synthesis Using a Magneto-optical Probe},
+journal = {Chem. Mater.},
+year = 2006,
+volume = 18,
+pages = {465-470},
+doi = {10.1021/cm052401p},
 }
 @article{Toby_2006_Rfact,
 author = {Brian H. Toby},
@@ -1098,7 +1187,7 @@ doi = {10.1088/1468-6996/15/5/055010},
 }
 @article{Wetterskog_2013_Anoma,
 author = {Erik Wetterskog and Cheuk-Wai Tai and Jekabs Grins and Lennart Bergstr\"om and German Salazar-Alvarez},
-title = {Anomalous Magnetic Properties of Nanoparticles Arising from Defect Structures: Topotaxial Oxidation of Fe_{1-x}O|Fe_{3-\delta}O_4 Core|Shell Nanocubes to Single-Phase Particles},
+title = {Anomalous Magnetic Properties of Nanoparticles Arising from Defect Structures: Topotaxial Oxidation of \ch{Fe_{1-x}O}|\ch{Fe_{3-$\delta$}O4} Core|Shell Nanocubes to Single-Phase Particles},
 journal = {ACS Nano},
 year = 2013,
 volume = 7,
@@ -1144,7 +1233,7 @@ doi = {10.1126/science.1065389},
 }
 @article{Wu_2014_Monol,
 author = {Liheng Wu and Pierre-Olivier Jubert and David Berman and Wayne Imaino and Alshakim Nelson and Huiyuan Zhu and Sen Zhang and Shouheng Sun},
-title = {Monolayer Assembly of Ferrimagnetic Co_xFe_{3-x}O_4 Nanocubes for Magnetic Recording},
+title = {Monolayer Assembly of Ferrimagnetic \ch{Co_xFe_{3-x}O_4} Nanocubes for Magnetic Recording},
 journal = {Nano Letters},
 year = 2014,
 volume = 14,
@@ -1177,6 +1266,15 @@ year = 2011,
 volume = 98,
 pages = {072509},
 doi = {10.1063/1.3556562},
+}
+@article{Ye_2000_Selfa,
+author = {Yong-Hong Ye and François LeBlanc and Alain Hache and Vo-Van Truong},
+title = {Self-assembling three-dimensional colloidal photonic crystal structure with high crystalline quality},
+journal = {Appl. Phys. Lett.},
+year = 2001,
+volume = 78,
+pages = {52-54},
+doi = {10.1063/1.1337619},
 }
 @article{Yu_2013_Cobal,
 author = {Yongsheng Yu and Adriana Mendoza-Garcia and Bo Ning and Shouheng Sun},
