--- a/components/glossary/glossary.tex
+++ b/components/glossary/glossary.tex
@@ -1,10 +1,51 @@
 %math abbreviations
 \newglossaryentry{vector}{%
   name={\ensuremath{\vec{a} ,\, a ,\, \hat{a}}},
-  description={Notation for a three dim. vector \ensuremath{\vec{a}}, it's magnitude \ensuremath{a} and direction with magnitude 1 such that \ensuremath{\hat{a} = \vec{a}/a}}
+  description={Three dim. vector \ensuremath{\vec{a}}, magnitude \ensuremath{a} and unit direction \ensuremath{\hat{a} = \vec{a}/a}}
+}
+\newglossaryentry{inc_ang}{%
+  name={\ensuremath{\alpha_i}},
+  description={incident angle}
+}
+\newglossaryentry{scat_ang}{%
+  name={\ensuremath{\theta}},
+  description={scattering angle}
+}
+\newglossaryentry{inc_vec}{%
+  name={\ensuremath{\vec{k}_i}},
+  description={incoming wave vector}
+}
+\newglossaryentry{out_vec}{%
+  name={\ensuremath{\vec{k}_o}},
+  description={outgoing wave vector}
+}
+\newglossaryentry{lSSD}{%
+  name={\ensuremath{L_\mathrm{SSD}}},
+  description={sample-to-detector distance}
+}
+\newglossaryentry{lCSD}{%
+  name={\ensuremath{L_\mathrm{CSD}}},
+  description={collimation-to-sample distance}
+}
+\newglossaryentry{magmom}{%
+  name={\ensuremath{\vec{\mu}}},
+  description={magnetic moment}
+}
+\newglossaryentry{FC}{
+  name={FC},
+  description={field cooled}
+}
+
+\newglossaryentry{ZFC}{
+  name={ZFC},
+  description={zero-field cooled}
 }
 
 %exp. Methods
+\newglossaryentry{EDX}{
+  name={EDX},
+  description={Energy-Dispersive X-ray Spectroscopy}
+}
 \newglossaryentry{SAXS}{
   name={SAXS},
   description={Small-Angle X-ray Scattering}
@@ -50,10 +91,56 @@
   description={X-Ray Diffraction}
 }
 \newglossaryentry{XRR}{
-  name={SAXS},
+  name={XRR},
   description={X-ray Reflectometry}
 }
 \newglossaryentry{VSM}{
   name={VSM},
   description={Vibrating Sample Magnetometry}
+}
+
+%instruments
+\newglossaryentry{GALAXI}{
+  name={GALAXI},
+  description={instrument at the Forschungszentrum J\"ulich for SAXS, GISAXS and XRR}
+}
+\newglossaryentry{MARIA}{
+  name={MARIA},
+  description={neutron reflectometer at MLZ}
+}
+\newglossaryentry{D17}{
+  name={D17},
+  description={neutron reflectometer at ILL}
+}
+\newglossaryentry{D22}{
+  name={D22},
+  description={small-angle neutron scattering instrument at ILL}
+}
+\newglossaryentry{D33}{
+  name={D33},
+  description={small-angle neutron scattering instrument at ILL}
+}
+\newglossaryentry{BM26B}{
+  name={BM26B},
+  description={small-angle X-ray scattering instrument at ESRF}
+}
+\newglossaryentry{SuperADAM}{
+  name={SuperADAM},
+  description={neutron reflectometer at ILL}
+}
+\newglossaryentry{PPMS}{
+  name={PPMS},
+  description={physical property measurement system, used for magnetometry}
+}
+\newglossaryentry{MLZ}{
+  name={MLZ},
+  description={Heinz Maier-Leibnitz Zentrum: facility for neutron research in Munich, Germany}
+}
+\newglossaryentry{ILL}{
+  name={ILL},
+  description={Institut Laue-Langevin, facility for neutron research in Grenoble, France}
+}
+\newglossaryentry{ESRF}{
+  name={ESRF},
+  description={European Synchrotron Radiation Facility}
 }
