--- a/config/config.tex
+++ b/config/config.tex
@@ -1,4 +1,4 @@
-\DeclareMathSymbol{,}{\mathord}{letters}{"3B}% german comma as dezimaltrennzeichen 
+\DeclareMathSymbol{,}{\mathord}{letters}{"3B}
 % \lehead{\headmark}
 % \rohead{\headmark}
 \newcommand{\thisPath}{.}
