--- a/config/packages.tex
+++ b/config/packages.tex
@@ -24,6 +24,7 @@
     natbib=true,
     style=chem-angew,
     doi=true,
+    articletitle=true,
     url=false,
     eprint=true,
     backref=true
