More updates updates updates

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -1350,6 +1350,12 @@ doi = {10.1103/RevModPhys.76.323},
 	publisher    = {Springer Science+Business Media, LLC},
 	date         = {1999}
 }
+@book{Guinier_1955_Smalla,
+	author       = {André Guinier and Gérard Fournet},
+	title        = {Small-angle Scattering of X-rays},
+	publisher    = {John Wiley \& Sons, Inc.},
+	date         = {1955}
+}
 @book{Guston_2010_Encyc,
 	author       = {David H. Guston},
 	title        = {Encyclopedia of Nanoscience and Society},
