Add CC preparation, Update geometry

--- a/dresen_thesis.tex
+++ b/dresen_thesis.tex
@@ -5,8 +5,8 @@
   a4paper,
   titlepage,
   listof=totoc,
-  % cleardoublepage=plain,
-  % open=right,
+  twoside,
+  open=right,
  ]{scrbook}
 \providecommand{\main}{.}
 
