--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -418,6 +418,15 @@ volume = 83,
 pages = {052122},
 doi = {10.1103/PhysRevA.83.052122},
 }
+@article{Hansen_1998_Model,
+author = {M. F. Hansen and S. Mørup},
+title = {Models for the dynamics of interacting magnetic nanoparticles},
+journal = {JMMM},
+year = 1998,
+volume = 184,
+pages = {262-274},
+doi = {10.1016/S0304-8853(97)01165-7},
+}
 @article{Heinz_2015_Maria,
 author = {Heinz Maier-Leibnitz Zentrum},
 title = {MARIA: Magnetic reflectometer with high incident angle},
@@ -617,6 +626,15 @@ volume = 7,
 pages = {19596},
 doi = {10.1039/c5nr04266f},
 }
+@article{Luttinger_1946_Theor,
+author = {J. M. Luttinger and L. Tisza},
+title = {Theory of Dipole Interaction in Crystals},
+journal = {Phys. Rev.},
+year = 1946,
+volume = 70,
+pages = {954-964},
+doi = {10.1103/PhysRev.70.954},
+}
 @article{Margulies_1997_Origi,
 author = {D. T. Margulies and F. T. Parker and M. L. Rudee and F. E. Spada and J. N. Chapman and P. R. Aitchison and A. E. Berkowitz},
 title = {Origin of the Anomalous Magnetic Behaviour in Single Cyrstal \ch{Fe3O4} Films},
@@ -716,6 +734,15 @@ volume = 44,
 pages = {1272-1276},
 doi = {10.1107/S0021889811038970},
 }
+@article{Morup_2010_Magne,
+author = {S. Mørup and M. F. Hansen and C. Frandsen},
+title = {Magnetic interactions between nanoparticles},
+journal = {B. J. Nanotechnol.},
+year = 2010,
+volume = 1,
+pages = {182-190},
+doi = {10.3762/bjnano1.22},
+}
 @article{Muscas_2015_Evolu,
 author = {G. Muscas and N. Yaacoub and G. Concas and F. Sayed and R. Sayed Hassan and J.M. Greneche and C. Cannas and A. Musinu and V. Foglietti and S. Casciardi and C. Sangregoria and D. Peddis},
 title = {Evolution of the magnetic structure with chemical composition in spinel iron oxide nanoparticles},
@@ -742,6 +769,15 @@ year = 1980,
 volume = 15,
 pages = {761-779},
 doi = {10.1051/rphysap:01980001503076100},
+}
+@article{Otero_2000_Influ,
+author = {J. García-Otero and M. Porto and J. Rivas and A. Bunde},
+title = {Influence of Dipolar Interaction on Magnetic Properties of Ultrafine Ferromagnetic Particles},
+journal = {Phys. Rev. Lett.},
+year = 2000,
+volume = 84,
+pages = {167-170},
+doi = {10.1103/PhysRevLett.84.167},
 }
 @article{Park_2004_Ultra,
 author = {Jongnam Park and Kwangjin An and Yosun Hwang and Je-Geun Park and Han-Jin Noh and
@@ -770,6 +806,15 @@ year = 2011,
 volume = 21,
 pages = {16018},
 doi = {10.1039/c1jm12012c},
+}
+@article{Pauly_2012_Sized,
+author = {M Pauly and B. P. Pichon and P. Panissod and S. Fleutot and P. Rodriguez and M. Drillon and Sylvie Begin-Colin},
+title = {Size dependent dipolar interactions in iron oxide nanoparticle monolayer and multilayer Langmuir-Blodgett films},
+journal = {J. Mater. Chem.},
+year = 2012,
+volume = 22,
+pages = {6343},
+doi = {10.1039/c2jm15797g},
 }
 @article{Peddis_2008_Spinc,
 author = {D. Peddis and M. V. Mansilla and S. Morup and C. Cannas and A. Musinu and G. Piccaluga and F. D'Orazio and F. Lucari and D. Fiorani},
@@ -1300,6 +1345,13 @@ doi = {10.1103/RevModPhys.76.323},
 	publisher    = {John Wiley \& Sons, Inc.},
 	date         = {2011},
   edition      = {2}
+}
+@book{Bevington_2003_Datar,
+	author       = {Philip Bevington and D. Keith Robinson},
+	title        = {Data Reduction and Error Analysis for the Physical Sciences},
+	publisher    = {McGraw-Hill},
+	date         = {2003},
+  edition      = {3}
 }
 @book{Blundell_2001_Magne,
 	author       = {Stephen Blundell},
