Update char methods up to page 23

--- a/components/closingpages/danksagung/danksagung.tex
+++ b/components/closingpages/danksagung/danksagung.tex
@@ -17,7 +17,7 @@
 
 	A great acknowledgement is spoken to Viktor Klippert and everybody of his workshop for their dedicated support and ingenious talent to build anything that can be drawn on a piece of paper.
 
-	The VCI is gratefully thanked for granting the Kekulé grant that financed three years of this thesis.
+	The VCI is gratefully acknowledged for the financial support through the Kekulé grant.
 
 	Annette Schmidt is thanked for sharing laboratory spaces and access to equipment to perform chemical work, Patricia Bach for everything that she does to keep the laboratories running.
 
@@ -27,6 +27,8 @@
 	Emmanuel Kentzinger \& Michael Smik (GALAXI), Alexei Vorobiev \& Gunnar Pálsson \& Anton Devishvili (SuperADAM), Dirk Honecker (D22 \& D33), Stefan Mattauch \& Alexandros Koutsioumpas (MARIA), Thomas Saerbeck (D17) and Daniel Hermida Merino (BM26B)
 
 	Ruth Bruker is thanked for being a support if problems at the scanning electron microscope occurred and for giving the introduction to the instrument.
+
+	Andreas Mettenb\"orger is thanked for performing XRD measurements in the working group of Prof.\ Mathur.
 
 	Stefan Roitsch additionally for performing the transmission electron microscopy measurements.
 
