--- a/components/glossary/glossary.tex
+++ b/components/glossary/glossary.tex
@@ -5,40 +5,40 @@
 }
 \newglossaryentry{inc_ang}{%
   name={\ensuremath{\alpha_i}},
-  description={incident angle}
+  description={Incident angle}
 }
 \newglossaryentry{scat_ang}{%
   name={\ensuremath{\theta}},
-  description={scattering angle}
+  description={Scattering angle}
 }
 \newglossaryentry{inc_vec}{%
   name={\ensuremath{\vec{k}_i}},
-  description={incoming wave vector}
+  description={Incoming wave vector}
 }
 \newglossaryentry{out_vec}{%
   name={\ensuremath{\vec{k}_o}},
-  description={outgoing wave vector}
+  description={Outgoing wave vector}
 }
 \newglossaryentry{lSSD}{%
   name={\ensuremath{L_\mathrm{SSD}}},
-  description={sample-to-detector distance}
+  description={Sample-to-detector distance}
 }
 \newglossaryentry{lCSD}{%
   name={\ensuremath{L_\mathrm{CSD}}},
-  description={collimation-to-sample distance}
+  description={Collimation-to-sample distance}
 }
 \newglossaryentry{magmom}{%
   name={\ensuremath{\vec{\mu}}},
-  description={magnetic moment}
+  description={Magnetic moment}
 }
 \newglossaryentry{FC}{
   name={FC},
-  description={field cooled}
+  description={Field cooled}
 }
 
 \newglossaryentry{ZFC}{
   name={ZFC},
-  description={zero-field cooled}
+  description={Zero-field cooled}
 }
 
 %exp. Methods
@@ -102,39 +102,39 @@
 %instruments
 \newglossaryentry{GALAXI}{
   name={GALAXI},
-  description={instrument at the Forschungszentrum J\"ulich for SAXS, GISAXS and XRR}
+  description={Instrument at the Forschungszentrum J\"ulich for SAXS, GISAXS and XRR}
 }
 \newglossaryentry{MARIA}{
   name={MARIA},
-  description={neutron reflectometer at MLZ}
+  description={Neutron reflectometer at MLZ}
 }
 \newglossaryentry{D17}{
   name={D17},
-  description={neutron reflectometer at ILL}
+  description={Neutron reflectometer at ILL}
 }
 \newglossaryentry{D22}{
   name={D22},
-  description={small-angle neutron scattering instrument at ILL}
+  description={Small-angle neutron scattering instrument at ILL}
 }
 \newglossaryentry{D33}{
   name={D33},
-  description={small-angle neutron scattering instrument at ILL}
+  description={Small-angle neutron scattering instrument at ILL}
 }
 \newglossaryentry{BM26B}{
   name={BM26B},
-  description={small-angle X-ray scattering instrument at ESRF}
+  description={Small-angle X-ray scattering instrument at ESRF}
 }
 \newglossaryentry{SuperADAM}{
   name={SuperADAM},
-  description={neutron reflectometer at ILL}
+  description={Neutron reflectometer at ILL}
 }
 \newglossaryentry{PPMS}{
   name={PPMS},
-  description={physical property measurement system, used for magnetometry}
+  description={Physical property measurement system, used for magnetometry}
 }
 \newglossaryentry{MLZ}{
   name={MLZ},
-  description={Heinz Maier-Leibnitz Zentrum: facility for neutron research in Munich, Germany}
+  description={Heinz Maier-Leibnitz Zentrum: facility for neutron research in Garching near Munich, Germany}
 }
 \newglossaryentry{ILL}{
   name={ILL},
@@ -142,5 +142,5 @@
 }
 \newglossaryentry{ESRF}{
   name={ESRF},
-  description={European Synchrotron Radiation Facility}
+  description={European Synchrotron Radiation Facility, facility for X-ray research in Grenoble, France}
 }
